--- a/simple_app.html
+++ b/simple_app.html
@@ -11,56 +11,70 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <div>
+    <div class="container-fluid my_container">
       <header>
+        <div class="row">
+          <div class="col-md-8">
         <h1>Dashboard <small>Important Information For Important People</small></h1>
       </header>
-      <div>
-        <div>
           <h2>Very Important Sidebar</h2>
           <ul>
-            <li><a href="simple_app.html">Last Month</a></li>
-            <li><a href="simple_app.html">This Month</a></li>
-            <li><a href="simple_app.html">Next Month</a></li>
+            <div class="row">
+              <div class="col-md-1"
+            <li><a href="simple_app.html" class="btn btn-primary">Last Month</a></li>
+          </div>
+          <div class="row">
+            <div class="col-md-1">
+            <li><a href="simple_app.html" class="btn btn-default">This Month</a></li>
+          </div>
+            <div class="row">
+              <div class="col-md-1">
+            <li><a href="simple_app.html" class="btn btn-info">Next Month</a></li>
+          </div>
           </ul>
+          <div class="row">
+            <div class="col-md-3">
           <h2>Do not press the button below! No one knows what will happen!</h2>
-          <a href="http://vincentadultman.com/">Delete History</a>
+          <a href="http://vincentadultman.com/" class="btn btn-primary">Delete History</a>
         </div>
-        <div>
+        <div class="row">
+          <div class="col-md-6">
           <h2>Business Data. For Business.</h2>
+          <div class="row">
+            <div class="col-md-6">
           <h3>Graphs</h3>
-          <div>
-            <div>
               <img src="images/graph1.jpg" alt="graph 1">
-              I like business... transactions. Business wise, this all seems like appropriate business. I went to the stock market today. I did a business.
+               I like business... transactions. Business wise, this all seems like appropriate business. I went to the stock market today. I did a business.
             </div>
-            <div>
+            <div class="row">
+              <div class="col-md-6">
               <img src="images/graph2.png" alt="graph 2">
               I like business... transactions. Business wise, this all seems like appropriate business. I went to the stock market today. I did a business.
             </div>
-            <div>
+            <div class="row">
+              <div class="col-md-6"
               <img src="images/graph3.gif" alt="graph 3">
               I like business... transactions. Business wise, this all seems like appropriate business. I went to the stock market today. I did a business.
             </div>
-          </div>
           <h3>Charts</h3>
-          <div>
-            <div>
+          <div class="row">
+            <div class="lead">
               <img src="images/chart1.png" alt="chart 1">
-              I like business... transactions. Business wise, this all seems like appropriate business. I went to the stock market today. I did a business.
+              <p class="lead">I like business... transactions. Business wise, this all seems like appropriate business. I went to the stock market today. I did a business.</p>
             </div>
-            <div>
+            <div class="row">
+              <div class="col-md-6">
               <img src="images/chart2.png" alt="chart 1">
               I like business... transactions. Business wise, this all seems like appropriate business. I went to the stock market today. I did a business.
             </div>
-            <div>
+            <div class="row">
+              <div class="col-md-6">
               <img src="images/chart3.gif" alt="chart 1">
               I like business... transactions. Business wise, this all seems like appropriate business. I went to the stock market today. I did a business.
             </div>
-          </div>
           <h3>Metrics</h3>
-          <div>
-            <div>
+          <div class="row">
+            <div class="col-md-6">
               I like business... transactions. Business wise, this all seems like appropriate business. I went to the stock market today. I did a business.
             </div>
             <div>
